--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Top Cooling HVAC</title>
+    <title>Contact Us - Top Cooling HVAC</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -17,7 +17,7 @@
             text-align: center; 
         }
         nav a { 
-            margin: 0 15px; 
+            margin: 0 10px; 
             text-decoration: none; 
             color: #fff; 
             font-weight: bold; 
@@ -26,7 +26,7 @@
             color: #ffcb05; 
         }
         main { 
-            padding: 40px; 
+            padding: 20px; 
             max-width: 800px; 
             margin: auto; 
             background: #fff; 
@@ -36,40 +36,16 @@
         h1 { 
             color: #00395d;
         }
-        form {
-            display: flex;
-            flex-direction: column; /* Stack the input fields vertically */
-        }
-        label {
-            margin-top: 10px; /* Add some space above each label */
-        }
-        input, textarea {
-            margin-top: 5px; /* Space between label and input/textarea */
-            padding: 10px; /* Add some padding inside inputs */
-            border: 1px solid #ccc; /* Add border to inputs */
-            border-radius: 4px; /* Rounded corners for inputs */
-        }
-        button {
-            margin-top: 10px; /* Space above the button */
-            padding: 10px; /* Add some padding for the button */
-            background-color: #00395d; /* Button color */
-            color: #fff; /* Button text color */
-            border: none; /* Remove default border */
-            border-radius: 4px; /* Rounded corners for button */
-            cursor: pointer; /* Change cursor when hovering */
-        }
-        button:hover {
-            background-color: #005080; /* Darker shade on hover */
-        }
-        .thank-you {
-            margin-top: 20px; /* Space above thank you message */
-            color: green; /* Color for the thank you message */
-            display: none; /* Initially hidden */
+
+        @media (max-width: 600px) {
+            nav a {
+                display: block;
+                margin: 10px 0; 
+            }
         }
     </style>
 </head>
 <body>
-
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -80,33 +56,9 @@
 
     <main>
         <h1>Contact Us</h1>
-        <p>We would love to hear from you! Please fill out the form to get in touch with us.</p>
-        <form action="#" method="post" onsubmit="return showThankYouMessage();">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-
-            <button type="submit">Send Message</button>
-        </form>
-        <p class="thank-you" id="thank-you-message">Thank you for your message!</p>
+        <p>For inquiries, please reach out to us via the following methods:</p>
+        <p>Email: <a href="mailto:info@topcoolinghvac.com">info@topcoolinghvac.com</a></p>
+        <p>Phone: (123) 456-7890</p>
     </main>
-
-    <script>
-        function showThankYouMessage() {
-            // Prevent the default form submission.
-            event.preventDefault();
-            // Show the thank you message.
-            document.getElementById('thank-you-message').style.display = 'block';
-            // Optionally, reset the form.
-            document.querySelector('form').reset();
-            return false; // Prevent form submission.
-        }
-    </script>
-
 </body>
 </html>
