--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Top Cooling HVAC</title>
+    <title>Home - Top Cooling HVAC</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -17,7 +17,7 @@
             text-align: center; 
         }
         nav a { 
-            margin: 0 15px; 
+            margin: 0 10px; 
             text-decoration: none; 
             color: #fff; 
             font-weight: bold; 
@@ -26,7 +26,7 @@
             color: #ffcb05; 
         }
         main { 
-            padding: 40px; 
+            padding: 20px; 
             max-width: 800px; 
             margin: auto; 
             background: #fff; 
@@ -35,11 +35,21 @@
         }
         h1 { 
             color: #00395d;
-               }
+        }
+        img {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        @media (max-width: 600px) {
+            nav a {
+                display: block;
+                margin: 10px 0; 
+            }
+        }
     </style>
 </head>
 <body>
-    <img src="Screenshot 2025-05-31 215036.png" alt="Banner" style="width:800px; height:600px; display:block; object-fit:cover; margin: 0 auto;">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
@@ -47,10 +57,11 @@
         <a href="contact.html">Contact Us</a>
         <a href="blog.html">Blog</a>
     </nav>
+
     <main>
         <h1>Welcome to Top Cooling HVAC</h1>
-        <p>At Top Cooling HVAC, we are dedicated to ensuring your ultimate comfort with state-of-the-art technology and expert installation services. Our team is committed to excellence and stays up-to-date with the latest innovations in the HVAC industry. Stay tuned for exciting updates and valuable tips!</p>
-
-       </main>
+        <p>Your comfort is our priority. Explore our services dedicated to providing the best HVAC solutions for your needs.</p>
+        <img src="banner-image.jpg" alt="Top Cooling HVAC Banner">
+    </main>
 </body>
 </html>
